Fix menu gap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -93,7 +93,7 @@ nav {
       display: flex;
 
       li {
-        margin-left: 56px;
+        margin-left: 3rem;
         list-style: none;
 
         a {
